@@ -1,3 +1,4 @@
+* Campaigns Out: include NoAnswer and Abandoned calls in CSV report too.
 * Agents: Do not leave newly created or modified agent without an ECCP password.
   The ECCP password is autogenerated if required. Also, assign an ECCP password
   at install/update time.
